# MyProto

./: CMakeLists.txt  README.md  main.cpp
Client/: MyProtoClient.cpp  MyProtoClient.h
Connect/: ConnectionHandler.cpp  ConnectionHandler.h
Logger/: MyLogger.cpp  MyLogger.h
Myproto/: ReliableMsgManager.cpp  ReliableMsgManager.h  ThreadPool.cc  myproto.cpp  myproto.h
Server/: MyProtoServer.cpp  MyProtoServer.h
ServiceHandler/: BusinessHandler.cpp  BusinessHandler.h
output/build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
output/build_release/: CMakeCache.txt  Makefile  cmake_install.cmake
output/debug/received_echo_data/: 127.0.0.1:46810_20251106_175526_807.json  127.0.0.1:46810_20251106_175527_811.json  127.0.0.1:46810_20251106_175528_812.json  127.0.0.1:46810_20251106_175529_813.json  127.0.0.1:46810_20251106_175530_813.json
output/release/: myproto_client_test  myproto_server
shejimoshi/: adapter  adapter.cpp  decorator  decorator.cpp  factory  factory.cpp  observer  observer.cpp  proxy  proxy.cpp  state.cpp
test/: client_main.cpp
